--- a/RuizWebsite/about.html
+++ b/RuizWebsite/about.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>James Ruiz Music</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="images/headphones.png">
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
@@ -28,8 +30,8 @@
                 <!-- Left-aligned links (default) -->
                 <a href="index.html">home</a>
                 <a href="about.html" class="active">about</a>
-                <a href="#contact">lyrics</a>
-                <a href="#contact">events</a>
+                <a href="lyrics.html">lyrics</a>
+                <a href="events.html">events</a>
 
                 <!-- Right-aligned links -->
                 <div class="topnav-right">
