--- a/RuizWebsite/lyrics.html
+++ b/RuizWebsite/lyrics.html
@@ -7,7 +7,7 @@
     <title>James Ruiz Music</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="images/headphones.png">
-    
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
@@ -24,13 +24,13 @@
 
                 <!-- Centered link -->
                 <div class="topnav-centered">
-                    <!-- <a href="index.html" class="blog-header-logo">James Ruiz</a> -->
+                    <a href="index.html" class="blog-header-logo">James Ruiz</a>
                 </div>
 
                 <!-- Left-aligned links (default) -->
-                <a href="index.html" class="active">home</a>
+                <a href="index.html">home</a>
                 <a href="about.html">about</a>
-                <a href="lyrics.html">lyrics</a>
+                <a href="lyrics.html" class="active">lyrics</a>
                 <a href="events.html">events</a>
 
                 <!-- Right-aligned links -->
@@ -46,54 +46,69 @@
         </header>
 
         <main class="container">
-            <section>
-                <div class="jumbotron jumbotron-fluid position-relative">
-                    <div class="container">
-                        <h1 class="display-3">James Ruiz</h1>
+            <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark" id="lyrics">
+                <!-- <img src="images/james_portrait.jpg" alt=""> -->
+                <div class="col-md-6 px-0">
+                    <h1 class="display-4 font-italic">Lyrics</h1>
+                    <!-- <p class="lead my-3">James Ruiz is an emerging American singer-songwriter, musician from Phoenix, -->
+                        <!-- Arizona. Ruiz performs his work primarily in soft rock and acoustic genres.</p> -->
+                    <!-- <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p> -->
+                </div>
+            </div>
 
+
+
+
+
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                        alt="Thumbnail [100%x225]" src="images/Fresno.png" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                    <div class="card-body">
+                        <h5 class="card-title">Fresno EA PM</h5>
+                        <hr>
+                        <a target="_blank" href="https://maps.bpgdesigns.com/OneFiber/Fresno/EA_PM/" class="btn btn-primary">Go
+                            to Site</a>
                     </div>
                 </div>
-            </section>
-
-
+            </div>
 
 
         </main>
 
 
-        <img src="images/musician1000.png" id="BG">
-        <!-- <img src="images/james_portrait.jpg" id="BG"> -->
+        <img src="images/GuitarTree/614.jpg" id="BG">
 
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <span class="copyright">Copyright &copy; Ruiz Music 2018</span>
                     </div>
-                    <div class="col-md-4">
-                            <ul class="list-inline social-buttons">
-                                    <li class="list-inline-item">
-                                        <a href="https://www.twitter.com/" target="_blank">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="https://www.facebook.com/" target="_blank">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="https://www.instagram.com/" target="_blank">
-                                            <i class="fab fa-instagram"></i>
-                                        </a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="https://www.youtube.com/" target="_blank">
-                                            <i class="fab fa-youtube"></i>
-                                        </a>
-                                    </li>
-                                </ul>
+                    <div class="col-md-6">
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a href="https://www.twitter.com/" target="_blank">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.facebook.com/" target="_blank">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/" target="_blank">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://www.youtube.com/" target="_blank">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                     <!-- <div class="col-md-4">
                         <ul class="list-inline quicklinks">
