--- a/RuizWebsite/lyrics.html
+++ b/RuizWebsite/lyrics.html
@@ -47,32 +47,69 @@
 
         <main class="container">
             <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark" id="lyrics">
-                <!-- <img src="images/james_portrait.jpg" alt=""> -->
+                <!-- <img src="images/arena.jpg" alt="Arena"> -->
                 <div class="col-md-6 px-0">
                     <h1 class="display-4 font-italic">Lyrics</h1>
                     <!-- <p class="lead my-3">James Ruiz is an emerging American singer-songwriter, musician from Phoenix, -->
-                        <!-- Arizona. Ruiz performs his work primarily in soft rock and acoustic genres.</p> -->
+                    <!-- Arizona. Ruiz performs his work primarily in soft rock and acoustic genres.</p> -->
                     <!-- <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p> -->
                 </div>
             </div>
 
 
 
-
-
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                        alt="Thumbnail [100%x225]" src="images/Fresno.png" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
-                    <div class="card-body">
-                        <h5 class="card-title">Fresno EA PM</h5>
-                        <hr>
-                        <a target="_blank" href="https://maps.bpgdesigns.com/OneFiber/Fresno/EA_PM/" class="btn btn-primary">Go
-                            to Site</a>
+            <section class="lyricsCards">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm" id="lyricsCards">
+                            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="images/Generation/401951-PCRX4Q-891.jpg"
+                                data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <h5 class="card-title">New Fire</h5>
+                                <hr>
+                                <a target="_blank" href="Songs/NewFire.pdf" class="btn btn-primary">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm" id="lyricsCards">
+                            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="images/Generation/401951-PCRX4Q-891.jpg"
+                                data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <h5 class="card-title">Fill Me Up</h5>
+                                <hr>
+                                <a target="_blank" href="Songs/FillMeUp.pdf" class="btn btn-primary">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm" id="lyricsCards">
+                            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="images/Generation/401951-PCRX4Q-891.jpg"
+                                data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <h5 class="card-title">Hey Momma</h5>
+                                <hr>
+                                <a target="_blank" href="Songs/HeyMomma.pdf" class="btn btn-primary">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm" id="lyricsCards">
+                            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="images/Generation/401951-PCRX4Q-891.jpg"
+                                data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <h5 class="card-title">One in a Million</h5>
+                                <hr>
+                                <a target="_blank" href="Songs/OneinaMillion.pdf" class="btn btn-primary">Download</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-
+            </section>
 
         </main>
 
